changed banner image attempted to fix gallery image alignment issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -825,6 +825,7 @@
 			display: -webkit-flex;
 			display: -ms-flex;
 			display: flex;
+			object-fit: cover;
 			-moz-flex-wrap: wrap;
 			-webkit-flex-wrap: wrap;
 			-ms-flex-wrap: wrap;
@@ -861,6 +862,7 @@
 					max-width: 100%;
 					height: auto;
 					vertical-align: middle;
+					object-fit: cover;
 				}
 
 				.gallery .content .media:hover img {
@@ -1471,7 +1473,7 @@
 		height: 75vh;
 		position: relative;
 		background: #000;
-		background-image: url(../../images/banner.jpg);
+		background-image: url(../../images/header-manny-moreno-unsplash.jpg);
 		background-size: cover;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
